test/compare/testdata/scripts/no-statement.sgo
// errorcheck

:  // ERROR `unexpected :, expected statement`
∞  // ERROR `illegal character U+221E '∞'`
}  // ERROR `unexpected }, expecting statement`
